--- a/main.html
+++ b/main.html
@@ -11,6 +11,28 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table>
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Tarun</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Arjun</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Sumit</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
